# realpretend-log-analysis

./: CMakeLists.txt  LICENSE  README.md  analysis.sh
src/: analysis.cpp  functions.h  stories.h
